fix spacing issues with html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,11 +257,13 @@ li a:hover {
   line-height: 0;
   column-count: 4;
   column-gap: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .gallery img {
-  margin: 5px;
   width:100%;
+  margin-bottom: 10px;
 }
 
 .gallery-hr {
@@ -322,11 +324,6 @@ button:hover {
 }
 
 /*--------------------------------------Footer*/
-
-.space {
-  height: 200px;
-  width: 100%;
-}
 
 .footer {
   height: auto;
